Fix direct urls that broke with new buildbot version.
git-svn-id: svn+ssh://fridge/svn/pov-admin/fridge/www/zope3.pov.lt@471 f5f2a0ea-8943-49f3-8d0d-97120da47bfc

--- a/index.html
+++ b/index.html
@@ -20,19 +20,18 @@
       </tr>
       <tr>
         <td>
-          <a href="http://zope3.pov.lt/buildbot/py2.4-32bit-linux/builds/-1/step-test/1">Python 2.4 on 32-bit Linux</a>
+          <a href="http://zope3.pov.lt/buildbot/builders/py2.4-32bit-linux/builds/-1/steps/test/logs/summary">Python 2.4 on 32-bit Linux</a>
         </td>
         <td>
-          <a href="http://zope3.pov.lt/buildbot/py2.4-64bit-linux/builds/-1/step-test/1">Python 2.4 on 64-bit Linux</a>
+          <a href="http://zope3.pov.lt/buildbot/builders/py2.4-64bit-linux/builds/-1/steps/test/logs/summary">Python 2.4 on 64-bit Linux</a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="http://zope3.pov.lt/buildbot/py2.5-32bit-linux/builds/-1/step-test/1">Python 2.5 on 32-bit Linux</a>
+          <a href="http://zope3.pov.lt/buildbot/builders/py2.5-32bit-linux/builds/-1/steps/test/logs/summary">Python 2.5 on 32-bit Linux</a>
         </td>
         <td>
-          <a href="http://zope3.pov.lt/buildbot/py2.5-64bit-linux/builds/-1/step-test/1">Python 2.5 on 64-bit Linux</a>
-        </td>
+          <a href="http://zope3.pov.lt/buildbot/builders/py2.5-64bit-linux/builds/-1/steps/test/logs/summary">Python 2.5 on 64-bit Linux</a>
       </tr>
       <tr>
         <td colspan="2" align="center">
@@ -41,19 +40,18 @@
       </tr>
       <tr>
         <td>
-          <a href="http://zope3.pov.lt/buildbot/py2.4-32bit-linux/builds/-1/step-test/0">Python 2.4 on 32-bit Linux</a>
+          <a href="http://zope3.pov.lt/buildbot/builders/py2.4-32bit-linux/builds/-1/steps/test/logs/stdio">Python 2.4 on 32-bit Linux</a>
         </td>
         <td>
-          <a href="http://zope3.pov.lt/buildbot/py2.4-64bit-linux/builds/-1/step-test/0">Python 2.4 on 64-bit Linux</a>
+          <a href="http://zope3.pov.lt/buildbot/builders/py2.4-64bit-linux/builds/-1/steps/test/logs/stdio">Python 2.4 on 64-bit Linux</a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="http://zope3.pov.lt/buildbot/py2.5-32bit-linux/builds/-1/step-test/0">Python 2.5 on 32-bit Linux</a>
+          <a href="http://zope3.pov.lt/buildbot/builders/py2.5-32bit-linux/builds/-1/steps/test/logs/stdio">Python 2.5 on 32-bit Linux</a>
         </td>
         <td>
-          <a href="http://zope3.pov.lt/buildbot/py2.5-64bit-linux/builds/-1/step-test/0">Python 2.5 on 64-bit Linux</a>
-        </td>
+          <a href="http://zope3.pov.lt/buildbot/builders/py2.5-64bit-linux/builds/-1/steps/test/logs/stdio">Python 2.5 on 64-bit Linux</a>
       </tr>
     </table>
   </blockquote>
