--- a/index.html
+++ b/index.html
@@ -4,6 +4,28 @@
 <head>
   <title>Zope 3 related odds and ends</title>
   <link rel="stylesheet" href="style.css" />
+  <style type="text/css">
+    .success { color: green !important; }
+    .failure { color: red !important; }
+    .success:after { content: " (ok)"; }
+    .failure:after { content: " (FAIL)"; }
+  </style>
+  <script type="text/javascript" src="jquery/jquery.min.js"></script>
+  <script type="text/javascript">
+    $(function() {
+        $.get('/buildbot/one_box_per_builder', function(data) {
+            var boxes = $(data).find('.LastBuild.box');
+            var names = boxes.prev('td').children('a').map(function(){return $(this).text();}).toArray();
+            var status = {};
+            boxes.filter('.success').prev('td').children('a').map(function(){status[$(this).text()] = true;});
+            boxes.filter('.failure').prev('td').children('a').map(function(){status[$(this).text()] = false;});
+            $.each(names, function(idx, name) {
+                $(document.getElementById(name + '-summary')).addClass(status[name] ? "success" : "failure");
+                $(document.getElementById(name + '-log')).addClass(status[name] ? "success" : "failure");
+            });
+        });
+    });
+  </script>
 </head>
 <body>
   <h1>Zope 3 related odds and ends</h1>
@@ -20,18 +42,22 @@
       </tr>
       <tr>
         <td>
-          <a href="http://zope3.pov.lt/buildbot/builders/py2.4-32bit-linux/builds/-1/steps/test/logs/summary">Python 2.4 on 32-bit Linux</a>
+          <a id="py2.4-32bit-linux-summary"
+             href="http://zope3.pov.lt/buildbot/builders/py2.4-32bit-linux/builds/-1/steps/test/logs/summary">Python 2.4 on 32-bit Linux</a>
         </td>
         <td>
-          <a href="http://zope3.pov.lt/buildbot/builders/py2.4-64bit-linux/builds/-1/steps/test/logs/summary">Python 2.4 on 64-bit Linux</a>
+          <a id="py2.4-64bit-linux-summary"
+             href="http://zope3.pov.lt/buildbot/builders/py2.4-64bit-linux/builds/-1/steps/test/logs/summary">Python 2.4 on 64-bit Linux</a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="http://zope3.pov.lt/buildbot/builders/py2.5-32bit-linux/builds/-1/steps/test/logs/summary">Python 2.5 on 32-bit Linux</a>
+          <a id="py2.5-32bit-linux-summary"
+             href="http://zope3.pov.lt/buildbot/builders/py2.5-32bit-linux/builds/-1/steps/test/logs/summary">Python 2.5 on 32-bit Linux</a>
         </td>
         <td>
-          <a href="http://zope3.pov.lt/buildbot/builders/py2.5-64bit-linux/builds/-1/steps/test/logs/summary">Python 2.5 on 64-bit Linux</a>
+          <a id="py2.5-64bit-linux-summary"
+             href="http://zope3.pov.lt/buildbot/builders/py2.5-64bit-linux/builds/-1/steps/test/logs/summary">Python 2.5 on 64-bit Linux</a>
       </tr>
       <tr>
         <td colspan="2" align="center">
@@ -40,18 +66,22 @@
       </tr>
       <tr>
         <td>
-          <a href="http://zope3.pov.lt/buildbot/builders/py2.4-32bit-linux/builds/-1/steps/test/logs/stdio">Python 2.4 on 32-bit Linux</a>
+          <a id="py2.4-32bit-linux-log"
+             href="http://zope3.pov.lt/buildbot/builders/py2.4-32bit-linux/builds/-1/steps/test/logs/stdio">Python 2.4 on 32-bit Linux</a>
         </td>
         <td>
-          <a href="http://zope3.pov.lt/buildbot/builders/py2.4-64bit-linux/builds/-1/steps/test/logs/stdio">Python 2.4 on 64-bit Linux</a>
+          <a id="py2.4-64bit-linux-log"
+             href="http://zope3.pov.lt/buildbot/builders/py2.4-64bit-linux/builds/-1/steps/test/logs/stdio">Python 2.4 on 64-bit Linux</a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="http://zope3.pov.lt/buildbot/builders/py2.5-32bit-linux/builds/-1/steps/test/logs/stdio">Python 2.5 on 32-bit Linux</a>
+          <a id="py2.5-32bit-linux-log"
+             href="http://zope3.pov.lt/buildbot/builders/py2.5-32bit-linux/builds/-1/steps/test/logs/stdio">Python 2.5 on 32-bit Linux</a>
         </td>
         <td>
-          <a href="http://zope3.pov.lt/buildbot/builders/py2.5-64bit-linux/builds/-1/steps/test/logs/stdio">Python 2.5 on 64-bit Linux</a>
+          <a id="py2.5-64bit-linux-log"
+             href="http://zope3.pov.lt/buildbot/builders/py2.5-64bit-linux/builds/-1/steps/test/logs/stdio">Python 2.5 on 64-bit Linux</a>
       </tr>
     </table>
   </blockquote>
