--- a/index.html
+++ b/index.html
@@ -37,17 +37,19 @@
             });
             $.each(status, function(name, ok) {
                 $(document.getElementById(name)).addClass(ok ? "success" : "failure");
-                $(document.getElementById(name + '-status')).html(status_text[name] + ':<br>');
+                $(document.getElementById(name + '-status')).html(status_text[name] + '<br>');
                 var build = build_number[name];
                 var words = status_text[name].split(' ');
                 var step = (words[0] == 'failed' ? words[1] : 'test');
-                var url = 'http://zope3.pov.lt/buildbot/builders/' + name + '/builds/' + build + '/steps/' + step + '/logs/';
+                var build_url = 'http://zope3.pov.lt/buildbot/builders/' + name + '/builds/' + build;
+                var step_url = build_url + '/steps/' + step;
                 if (step != 'test') {
-                    $(document.getElementById(name + '-summary')).hide().next().hide();
+                    $(document.getElementById(name + '-summary')).attr('href', build_url).text('all steps');
+                    $(document.getElementById(name + '-log')).attr('href', step_url + '/logs/stdio').text(step + ' log');
                 } else {
-                    $(document.getElementById(name + '-summary')).attr('href', url + 'summary');
+                    $(document.getElementById(name + '-summary')).attr('href', step_url + '/logs/summary');
+                    $(document.getElementById(name + '-log')).attr('href', step_url + '/logs/stdio');
                 }
-                $(document.getElementById(name + '-log')).attr('href', url + 'stdio');
             });
         });
     });
@@ -57,7 +59,7 @@
   <h1>Zope 3 related odds and ends</h1>
 
   <p><a href="irclogs/">IRC logs</a></p>
-  <p><a href="trac/">Source repository browser</a> (updated hourly)</p>
+  <p><a href="trac/">Source repository browser</a> (updated every 5 minutes)</p>
   <p><a href="buildbot/">Buildbot for the Zope 3.4 Known Good Set packages</a></p>
   <table class="buildbot-status">
     <tr>
