--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 <body>
   <h1>Zope 3 related odds and ends</h1>
 
-  <p><a href="irclogs/">IRC logs</a></p>
+  <p><a href="irclogs-zope/">IRC logs of #zope on FreeNode</a></p>
+  <p><a href="irclogs/">IRC logs of #zope3-dev on FreeNode</a></p>
   <p><a href="trac/">Source repository browser</a> (updated every 5 minutes)</p>
   <p><a href="buildbot/">Buildbot for the Zope 3.4 Known Good Set packages</a></p>
   <table class="buildbot-status">
