Make it validate, add contact info
git-svn-id: svn+ssh://fridge/svn/pov-admin/fridge/www/zope3.pov.lt@788 f5f2a0ea-8943-49f3-8d0d-97120da47bfc

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-          "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8" />
   <title>Zope 3 related odds and ends</title>
   <link rel="stylesheet" href="style.css" />
   <style type="text/css">
@@ -18,7 +18,7 @@
     }
     td a:link, td a:visited, td a:active, td a:hover {
       color: #666;
-    };
+    }
   </style>
   <script type="text/javascript" src="jquery/jquery.min.js"></script>
   <script type="text/javascript">
@@ -63,7 +63,7 @@
 
   <p><a href="irclogs-zope/">IRC logs of #zope on FreeNode</a></p>
   <p><a href="irclogs/">IRC logs of #zope3-dev on FreeNode</a></p>
-  <p><a href="trac/">Source repository browser</a> (updated every 5 minutes)</p>
+  <p><a href="trac/">Source repository browser of svn.zope.org</a> (updated every 5 minutes)</p>
   <p><a href="buildbot/">Buildbot for the Zope 3.4 Known Good Set packages</a></p>
   <table class="buildbot-status">
     <tr>
@@ -102,6 +102,12 @@
       </td>
     </tr>
   </table>
+
+  <div class="footer"> 
+    Site maintained by <a href="http://pov.lt/">Programmers of Vilnius</a>.
+    This site uses <a href="http://validator.w3.org/check/referer">valid</a> HTML and CSS.<br /> 
+    If you experience any problems with the website, please contact <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#119;&#101;&#98;&#109;&#97;&#115;&#116;&#101;&#114;&#64;&#112;&#111;&#118;&#46;&#108;&#116;">&#119;&#101;&#98;&#109;&#97;&#115;&#116;&#101;&#114;&#64;&#112;&#111;&#118;&#46;&#108;&#116;</a>.
+  </div> 
 
 </body>
 </html>
