Yeah, the slave machine died.
git-svn-id: svn+ssh://fridge/svn/pov-admin/fridge/www/zope3.pov.lt@1247 f5f2a0ea-8943-49f3-8d0d-97120da47bfc

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
   <table class="buildbot-status">
     <tr>
       <th>&nbsp;</th>
-      <th title="Ubuntu 8.04 LTS (Hardy Heron)">32-bit Linux</th>
+  <!--<th title="Ubuntu 8.04 LTS (Hardy Heron)">32-bit Linux</th>-->
+      <th title="the buildslave machine died"><del>32-bit Linux</del></th>
       <th title="Ubuntu 10.04 LTS (Lucid Lynx)">64-bit Linux</th>
     </tr>
     <tr>
