Sort by most supported first.
git-svn-id: svn+ssh://fridge/svn/pov-admin/fridge/www/zope3.pov.lt@1326 f5f2a0ea-8943-49f3-8d0d-97120da47bfc

--- a/py3/index.html
+++ b/py3/index.html
@@ -39,6 +39,9 @@
             th.appendTo(last_header_row);
         });
         var tbody = tbl.find('tbody');
+        data.sort(function(a, b) {
+            return b.supports.length - a.supports.length;
+        });
         $.each(data, function(idx, pkg) {
             var row = $('<tr>');
             $('<td>').text(pkg.name).appendTo(row);
