Describe the data.
git-svn-id: svn+ssh://fridge/svn/pov-admin/fridge/www/zope3.pov.lt@1328 f5f2a0ea-8943-49f3-8d0d-97120da47bfc

--- a/py3/index.html
+++ b/py3/index.html
@@ -75,6 +75,15 @@
     </tr>
   </table>
 
+  <p>This page lists all projects from <a href="http://svn.zope.org">svn.zope.org</a>
+    and the new <a href="https://github.com/ZopeFoundation">GitHub
+    ZopeFoundation organization</a>, and shows the latest version published on
+    the <a href="http://pypi.python.org/pypi">Python Package Index</a> and the
+    explicitly declared supported Python versions from trove classifiers for
+    that version.</p>
+
+  <p>The data are updated daily by a cron script.</p>
+
   <div class="footer"> 
     Site maintained by <a href="http://pov.lt/">Programmers of Vilnius</a>.
     This site uses <a href="http://validator.w3.org/check/referer">valid</a> HTML and CSS.<br /> 
