Highlight table row on hover.
git-svn-id: svn+ssh://fridge/svn/pov-admin/fridge/www/zope3.pov.lt@1336 f5f2a0ea-8943-49f3-8d0d-97120da47bfc

--- a/py3/index.html
+++ b/py3/index.html
@@ -26,6 +26,9 @@
     td.blockers,    td.blocks         { background: #fdd; color: #c44; }
     td.no-blockers, td.blocks-nothing { background: #dfd; color: #484; }
     td.blockers-na, td.blocks-na      { background: #fdfdfd; color: #eee; }
+
+    /* highlight on hover */
+    tbody > tr:hover   { background: #ffd; }
   </style>
   <script type="text/javascript" src="/jquery/jquery.min.js"></script>
   <script type="text/javascript">
