Dep graph at zope3.pov.lt/py3
git-svn-id: svn+ssh://fridge/svn/pov-admin/fridge/www/zope3.pov.lt@1339 f5f2a0ea-8943-49f3-8d0d-97120da47bfc

--- a/py3/index.html
+++ b/py3/index.html
@@ -186,7 +186,7 @@
     explicitly declared supported Python versions from trove classifiers for
     that version.</p>
 
-  <p>The data are updated daily by a cron <a href="https://github.com/mgedmin/ztk-py3-status">script</a>.</p>
+  <p>The data are updated daily by a <a href="https://gist.github.com/4686862">cron script</a>.</p>
 
   <div class="footer"> 
     Site maintained by <a href="http://pov.lt/">Programmers of Vilnius</a>.
